FreeST/test/Programs/InvalidTests/Modules/Cycle/CycleB/CycleB.fst
module CycleB.CycleB where

import Cycle

f : Int
f = id @Int $ 2 + g
